Fixed a not responsive button and a no item placeholder

--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -194,7 +194,7 @@
                         }
                     }
                 }
-                #submit-input-btn{
+                #submit-input-btn, #close-input-btn{
                     font-size: 0.8rem;
                     width: 90px;
                     height: 35px;
