--- a/src/styles/school.scss
+++ b/src/styles/school.scss
@@ -153,6 +153,9 @@
             .to-do-sub-text{
                 font-size: 0.9rem;
             }
+            .no-item-placeholder{
+                font-size: 0.9rem;
+            }
         }
     }
 }
@@ -179,6 +182,9 @@
             }
             .to-do-sub-text{
                 font-size: 0.9rem;
+            }
+            .no-item-placeholder{
+                font-size: 0.8rem;
             }
         }
     }
